# auth-service

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/handlers/: mod.rs
src/models/: user.rs
